--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Basic */
 html {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,BlinkMacSystemFont,Helvetica Neue,Arial,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
     /* 1 */
     -ms-text-size-adjust: 100%;
     /* 2 */
@@ -10,7 +10,7 @@ html {
 
 body {
     margin: 0;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     color: var(--font-color);
@@ -34,7 +34,7 @@ summary {
 }	
 
 .container {
-    max-width: 42em;
+    max-width: 48em;
     margin: 0 auto;
 }
 
@@ -153,6 +153,7 @@ p {
 
 hr {
     border-top: 1px solid var(--hr-color);
+    margin-top: 3em;
     height: 1px;
     border: 0;
 }
@@ -197,6 +198,8 @@ header nav a {
 
 .site-title {
     white-space: nowrap;
+    font-size: 1.1em;
+    font-weight: bold;
 }
 
 .common-header {
