--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* Basic */
 html {
-    font-family: Helvetica Neue", Arial,"Hiragino Kaku Gothic ProN", "Hiragino Sans", "BIZ UDPGothic", Meiryo, sans-serif;
+    font-family: "Helvetica Neue", Arial,"Hiragino Kaku Gothic ProN", "Hiragino Sans", "BIZ UDPGothic", Meiryo, sans-serif;
     /* 1 */
     -ms-text-size-adjust: 100%;
     /* 2 */
@@ -428,7 +428,7 @@ article figcaption {
     border-top: thin solid var(--hr-color);
     padding-top: 1.5em;
     margin-top: 3em;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 .common-footer-bottom {
