--- a/css/light.css
+++ b/css/light.css
@@ -2,9 +2,9 @@
     --font-color: #333;
     --bg-color: #fff;
 
-    --link-color:#1d60a3;
-    --link-state-color:#a31d1d;
-    --link-state-border-color: rgba(163, 29, 29, .5);
+    --link-color:#4169e1;
+    --link-state-color:#4169e1;
+    --link-state-border-color: #b0c4de;
 
     --thead-bg-color: lightgrey;
     --table-border-color: lightgrey;
