--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ header a {
 header h1 {
     font-size: 1em;
     margin-top: 1em;
-    margin-bottom: 0;
+    margin-bottom: 0em;
     font-weight: normal;
 }
 
@@ -207,9 +207,11 @@ header nav a {
 }
 
 .site-title {
-	font-size: 1.6em;
-    white-space: nowrap;
-    font-weight: bolder;
+    font-size: 1.35em;
+    line-height: 2em;
+    margin-top: 1.5em;
+    margin-bottom: 0em;
+    font-weight: 600;
 }
 
 .common-header {
