--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,8 @@ article figcaption {
 /* Pagination */
 
 .pagination {
+    border-top: thin solid var(--hr-color);
+    padding-top: 1em;
     display: flex;
     justify-content: space-between;
     margin-top: 3em;
@@ -427,10 +429,16 @@ article figcaption {
 /* Footer */
 
 .common-footer {
-    border-top: thin solid var(--hr-color);
-    padding-top: 1.5em;
-    margin-top: 3em;
+    padding-bottom: 4em;
+    margin-top: 0em;
     font-size: 12px;
+}
+
+.copyright {
+    border-top: thin solid var(--hr-color);
+    padding-top: 1em;
+    margin-top: 5em;
+    font-size: 11px;
 }
 
 .common-footer-bottom {
